--- a/code/01-ufc_data_preprocessing.ipynb
+++ b/code/01-ufc_data_preprocessing.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel(\"data_i/i_ufc_fight_data.xlsx\", sheet_name=\"fight_data\")"
+    "data = pd.read_excel(\"../data_i/raw/i_ufc_fight_data_raw.xlsx\", \n",
+    "                     sheet_name=\"fight_data\")"
    ]
   },
   {
