--- a/code/05-recommender_system.ipynb
+++ b/code/05-recommender_system.ipynb
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "3de183e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c29d227ff0534775b6e93873424c5870",
+       "model_id": "77404e0981b94611bd99262e7e1c52cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b20cd41288ef489489b91180557e9f1c",
+       "model_id": "5c81fefbe00a4caa8a3f7ca13cfd636e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "1217594d",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "432922df",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "a33e8e6d",
    "metadata": {
     "scrolled": false
@@ -129,8 +129,8 @@
    "outputs": [],
    "source": [
     "# loading in the data\n",
-    "data = pd.read_excel(\"data_i/processed/i_final.xlsx\", index_col=0, sheet_name='Sheet3')\n",
-    "scores = pd.read_excel(\"data_i/processed/i_loading_scores.xlsx\", index_col=0)\n",
+    "data = pd.read_excel(\"../data_i/processed/i_final.xlsx\", index_col=0, sheet_name='Sheet3')\n",
+    "scores = pd.read_excel(\"../data_i/processed/i_loading_scores.xlsx\", index_col=0)\n",
     "\n",
     "# creating the list to store the values from the questions being asked\n",
     "responses = {}\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "010d2d1f",
    "metadata": {
     "scrolled": false
@@ -170,7 +170,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "475a773248884194a4343a277f74223b",
+       "model_id": "c9bd162344e4435d997efaedf308fb39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -184,7 +184,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7507077cc4364670a39b4e1da5248305",
+       "model_id": "5147cc27907e4edeac75348e8c583108",
        "version_major": 2,
        "version_minor": 0
       },
@@ -198,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1cd606102eb54797a18f18a9d96d7252",
+       "model_id": "428755febae3462d8064057f60b249e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7c424d95d394cfea7b693a51bf707e5",
+       "model_id": "92bc17616d2646bcb28eaf31a576cf60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -226,7 +226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f44c85261df44de82622656c7efef26",
+       "model_id": "492df95fdb644b7d959d0a65316185f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,7 +240,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ab83493eede4c489819d4bc57f22c55",
+       "model_id": "e3c1102232514d4dbf4dc77319748fa1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e4c8b1900b04cd2a9cef9a092f657d7",
+       "model_id": "4cb43cc4217d40e0b9eb76b74da2c7df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d29b1f0ddd8e48a99c6915589c47c8e9",
+       "model_id": "5e16f069775449b6b17b1c6f1ec91922",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e79c7ad205e404fbf26a74a4ceb0256",
+       "model_id": "db53fab6cd4d4d7dbee1029dd200955e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d5a895525be941279291ee177fddda6e",
+       "model_id": "661dbeea69634d4381a8a83dde362d91",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "id": "ef754f74",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1ca8115c48e4441a28ce54f499f8529",
+       "model_id": "ab41a7972c1d4d799c71f9a0a9690aea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -377,7 +377,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "decf0c8c8beb4861a636febb714a1802",
+       "model_id": "cb4533ed95fc4e2490b812ac6ff2f0a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "id": "16618214",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "id": "891d6a92",
    "metadata": {},
    "outputs": [],
@@ -441,21 +441,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 23,
    "id": "39f6964a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'question1': \"Women's Strawweight Division\",\n",
-       " 'question2': 2,\n",
-       " 'question3': 2,\n",
-       " 'question4': 5,\n",
-       " 'question5': 6}"
+       "{}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,10 +462,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 24,
    "id": "6413c257",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'question1'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[24], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Filter DataFrame based on the first question\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m filtered_df \u001b[38;5;241m=\u001b[39m data[data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdivision\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[43mresponses\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mquestion1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m]\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# Filter the resulting DataFrame based on the second value\u001b[39;00m\n\u001b[0;32m      6\u001b[0m filtered_df \u001b[38;5;241m=\u001b[39m filtered_df[filtered_df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlab_num\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m responses[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquestion2\u001b[39m\u001b[38;5;124m'\u001b[39m]]\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'question1'"
+     ]
+    }
+   ],
    "source": [
     "# Filter DataFrame based on the first question\n",
     "filtered_df = data[data['division'] == responses['question1']]\n",
@@ -501,23 +509,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "7174604c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<span style='font-size:14pt; font-weight:bold; color:blue'>The recommended Fighters are: Ariane Carnelossi, Chan-Mi Jeon, Cory Sandhagen, Loma Lookboonmee, Syuri Kondo</span>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "recommended_fighters = filtered_df.drop(filtered_df.index[-1])\n",
     "recommended_fighters = recommended_fighters['Rank'].nlargest(5)\n",
